Change email and username, remove lfs

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,14 +1,9 @@
 [user]
-	email = e.chow@accenture.com
+	email = eric.zjp.chow@gmail.com
 	name = Eric Chow
-	username = e.chow
+	username = chowkapow
 [alias]
 	st = status
 	co = checkout
 	ci = commit
 	br = branch
-[filter "lfs"]
-	clean = git-lfs clean -- %f
-	smudge = git-lfs smudge -- %f
-	process = git-lfs filter-process
-	required = true
