Remove unused alias

--- a/.gitconfig
+++ b/.gitconfig
@@ -4,6 +4,8 @@
 	username = chowkapow
 [alias]
 	st = status
-	co = checkout
-	ci = commit
-	br = branch
+[filter "lfs"]
+	clean = git-lfs clean -- %f
+	smudge = git-lfs smudge -- %f
+	process = git-lfs filter-process
+	required = true
