--- a/settings.json
+++ b/settings.json
@@ -5,6 +5,7 @@
   "editor.wordWrap": "on",
   "explorer.confirmDragAndDrop": false,
   "files.insertFinalNewline": true,
+  "prettier.singleQuote": true,
   "terminal.integrated.fontFamily": "Anonymous Pro for Powerline",
   "terminal.integrated.fontSize": 14,
   "terminal.integrated.shell.osx": "zsh",
