--- a/settings.json
+++ b/settings.json
@@ -21,5 +21,5 @@
     }
   ],
   "window.zoomLevel": 0,
-  "workbench.colorTheme": "Panda Syntax"
+  "workbench.colorTheme": "Ayu Mirage Bordered"
 }
