--- a/settings.json
+++ b/settings.json
@@ -25,8 +25,8 @@
   ],
   "window.zoomLevel": 0,
   "workbench.colorCustomizations": {
-    "editorLineNumber.activeForeground": "#ffff00",
-    "editorLineNumber.foreground": "#f8f8ff",
+    "editorLineNumber.activeForeground": "#FFFFFF",
+    "editorLineNumber.foreground": "#808080",
   },
   "workbench.colorTheme": "Material Theme Palenight High Contrast",
   "workbench.iconTheme": "eq-material-theme-icons-palenight"
