Remove icon theme, disable auto-save for yml files

--- a/settings.json
+++ b/settings.json
@@ -26,5 +26,7 @@
     "editorLineNumber.foreground": "#808080"
   },
   "workbench.colorTheme": "Material Theme Palenight High Contrast",
-  "workbench.iconTheme": "material-icon-theme"
+  "[yaml]": {
+    "editor.formatOnSave": false
+  }
 }
