--- a/settings.json
+++ b/settings.json
@@ -1,13 +1,24 @@
 {
+  "editor.cursorStyle": "line",
+  "editor.cursorWidth": 2,
+  "editor.fontSize": 12,
+  "editor.fontWeight": "400",
   "editor.formatOnSave": true,
+  "editor.letterSpacing": 0.5,
+  "editor.lineHeight": 22,
   "editor.lineNumbers": "relative",
+  "editor.renderWhitespace": "all",
   "editor.tabSize": 2,
   "editor.wordWrap": "on",
   "explorer.confirmDragAndDrop": false,
   "files.insertFinalNewline": true,
+  "files.trimTrailingWhitespace": true,
   "git.enableSmartCommit": true,
+  "go.useLanguageServer": true,
   "javascript.updateImportsOnFileMove.enabled": "always",
+  "prettier.eslintIntegration": true,
   "prettier.singleQuote": true,
+  "python.formatting.provider": "black",
   "terminal.integrated.fontFamily": "Anonymous Pro for Powerline",
   "terminal.integrated.fontSize": 14,
   "terminal.integrated.shell.osx": "zsh",
@@ -27,7 +38,7 @@
     "editorLineNumber.activeForeground": "#FFFFFF",
     "editorLineNumber.foreground": "#808080"
   },
-  "workbench.colorTheme": "Material Theme Palenight High Contrast",
+  "workbench.colorTheme": "Cobalt2",
   "[yaml]": {
     "editor.formatOnSave": false
   }
