Sync BTT and VSCode, change right opt to cmd

--- a/settings.json
+++ b/settings.json
@@ -44,5 +44,9 @@
   "[yaml]": {
     "editor.formatOnSave": false
   },
-  "debug.javascript.autoAttachFilter": "disabled"
+  "debug.javascript.autoAttachFilter": "disabled",
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
+  "typescript.updateImportsOnFileMove.enabled": "always"
 }
