--- a/settings.json
+++ b/settings.json
@@ -48,5 +48,6 @@
   "[typescript]": {
     "editor.defaultFormatter": "esbenp.prettier-vscode"
   },
-  "typescript.updateImportsOnFileMove.enabled": "always"
+  "typescript.updateImportsOnFileMove.enabled": "always",
+  "explorer.confirmDelete": false
 }
